force-app/main/default/objects/DB_Data__c/DB_Data__c.object-meta.xml
<CustomObject>
    <label>D&amp;B Data</label>
    <nameField>
        <displayFormat>D-{00000}</displayFormat>
        <label>D&amp;B Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>D&amp;B Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>