force-app/main/default/objects/DB_Data__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>D&amp;B Data</relationshipLabel>
    <relationshipName>D_B_Data</relationshipName>
    <type>Lookup</type>
</CustomField>