force-app/main/default/objects/DB_Data__c/fields/Account_Key__c.field-meta.xml
<CustomField>
    <fullName>Account_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Account Key</label>
    <length>90</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>