force-app/main/default/objects/DB_Data__c/fields/Amount_Raised_In_USD_Millions__c.field-meta.xml
<CustomField>
    <fullName>Amount_Raised_In_USD_Millions__c</fullName>
    <label>Amount Raised In USD Millions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>