force-app/main/default/objects/DB_Data__c/fields/BTG_Dev_Phase__c.field-meta.xml
<CustomField>
    <fullName>BTG_Dev_Phase__c</fullName>
    <label>BTG Dev Phase</label>
    <length>50</length>
    <type>Text</type>
</CustomField>