force-app/main/default/objects/DB_Data__c/fields/BTG_Lead_Investor__c.field-meta.xml
<CustomField>
    <fullName>BTG_Lead_Investor__c</fullName>
    <label>BTG Lead Investor</label>
    <length>250</length>
    <type>Text</type>
</CustomField>