force-app/main/default/objects/DB_Data__c/fields/BTG_Prod_In_Dev__c.field-meta.xml
<CustomField>
    <fullName>BTG_Prod_In_Dev__c</fullName>
    <label>BTG Prod In Dev</label>
    <length>255</length>
    <type>Text</type>
</CustomField>