force-app/main/default/objects/DB_Data__c/fields/BTG_Prod_In_Market__c.field-meta.xml
<CustomField>
    <fullName>BTG_Prod_In_Market__c</fullName>
    <label>BTG Prod In Market</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>