force-app/main/default/objects/DB_Data__c/fields/BTG_Sector__c.field-meta.xml
<CustomField>
    <fullName>BTG_Sector__c</fullName>
    <label>BTG Sector</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>