force-app/main/default/objects/DB_Data__c/fields/BTG_Subsectors__c.field-meta.xml
<CustomField>
    <fullName>BTG_Subsectors__c</fullName>
    <label>BTG Subsectors</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>