force-app/main/default/objects/DB_Data__c/fields/Ca_Flag__c.field-meta.xml
<CustomField>
    <fullName>Ca_Flag__c</fullName>
    <label>Ca Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>