force-app/main/default/objects/DB_Data__c/fields/Ca_Parent_Duns_Name__c.field-meta.xml
<CustomField>
    <fullName>Ca_Parent_Duns_Name__c</fullName>
    <label>Ca Parent Duns Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>