force-app/main/default/objects/DB_Data__c/fields/Ca_Parent_Duns_Number__c.field-meta.xml
<CustomField>
    <fullName>Ca_Parent_Duns_Number__c</fullName>
    <label>Ca Parent Duns Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>