force-app/main/default/objects/DB_Data__c/fields/Ca_Segment__c.field-meta.xml
<CustomField>
    <fullName>Ca_Segment__c</fullName>
    <label>Ca Segment</label>
    <length>30</length>
    <type>Text</type>
</CustomField>