force-app/main/default/objects/DB_Data__c/fields/Ca_Territory__c.field-meta.xml
<CustomField>
    <fullName>Ca_Territory__c</fullName>
    <label>Ca Territory</label>
    <length>50</length>
    <type>Text</type>
</CustomField>