force-app/main/default/objects/DB_Data__c/fields/Date_Latest_Financing_Round__c.field-meta.xml
<CustomField>
    <fullName>Date_Latest_Financing_Round__c</fullName>
    <label>Date Latest Financing Round</label>
    <type>Date</type>
</CustomField>