force-app/main/default/objects/DB_Data__c/fields/Duns_Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Duns_Country_Name__c</fullName>
    <label>Duns Country Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>