force-app/main/default/objects/DB_Data__c/fields/Duns_Name__c.field-meta.xml
<CustomField>
    <fullName>Duns_Name__c</fullName>
    <label>Duns Name</label>
    <length>90</length>
    <type>Text</type>
</CustomField>