force-app/main/default/objects/DB_Data__c/fields/Duns_Number__c.field-meta.xml
<CustomField>
    <fullName>Duns_Number__c</fullName>
    <label>Duns Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>