force-app/main/default/objects/DB_Data__c/fields/Duns_State_Name__c.field-meta.xml
<CustomField>
    <fullName>Duns_State_Name__c</fullName>
    <label>Duns State Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>