force-app/main/default/objects/DB_Data__c/fields/Emp_Total__c.field-meta.xml
<CustomField>
    <fullName>Emp_Total__c</fullName>
    <label>Emp Total</label>
    <length>21</length>
    <type>Text</type>
</CustomField>