force-app/main/default/objects/DB_Data__c/fields/End_Market__c.field-meta.xml
<CustomField>
    <fullName>End_Market__c</fullName>
    <label>End Market</label>
    <length>270</length>
    <type>LongTextArea</type>
</CustomField>