force-app/main/default/objects/DB_Data__c/fields/EVP_Technology__c.field-meta.xml
<CustomField>
    <fullName>EVP_Technology__c</fullName>
    <label>EVP Technology</label>
    <length>255</length>
    <type>Text</type>
</CustomField>