force-app/main/default/objects/DB_Data__c/fields/Exchange_Ticker__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Ticker__c</fullName>
    <label>Exchange Ticker</label>
    <length>90</length>
    <type>Text</type>
</CustomField>