force-app/main/default/objects/DB_Data__c/fields/Geocoded_Address__c.field-meta.xml
<CustomField>
    <fullName>Geocoded_Address__c</fullName>
    <label>Geocoded Address</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>