force-app/main/default/objects/DB_Data__c/fields/Geocoded_City__c.field-meta.xml
<CustomField>
    <fullName>Geocoded_City__c</fullName>
    <label>Geocoded City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>