force-app/main/default/objects/DB_Data__c/fields/Geocoded_Country__c.field-meta.xml
<CustomField>
    <fullName>Geocoded_Country__c</fullName>
    <label>Geocoded Country</label>
    <length>90</length>
    <type>Text</type>
</CustomField>