force-app/main/default/objects/DB_Data__c/fields/Geocoded_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Geocoded_Latitude__c</fullName>
    <label>Geocoded Latitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>