force-app/main/default/objects/DB_Data__c/fields/Geocoded_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Geocoded_Longitude__c</fullName>
    <label>Geocoded Longitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>