force-app/main/default/objects/DB_Data__c/fields/Geocoded_State__c.field-meta.xml
<CustomField>
    <fullName>Geocoded_State__c</fullName>
    <label>Geocoded State</label>
    <length>90</length>
    <type>Text</type>
</CustomField>