force-app/main/default/objects/DB_Data__c/fields/Geocoded_Zip__c.field-meta.xml
<CustomField>
    <fullName>Geocoded_Zip__c</fullName>
    <label>Geocoded Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>