force-app/main/default/objects/DB_Data__c/fields/Hq_City__c.field-meta.xml
<CustomField>
    <fullName>Hq_City__c</fullName>
    <label>Hq_City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>