force-app/main/default/objects/DB_Data__c/fields/Hq_Country__c.field-meta.xml
<CustomField>
    <fullName>Hq_Country__c</fullName>
    <label>Hq Country</label>
    <length>20</length>
    <type>Text</type>
</CustomField>