force-app/main/default/objects/DB_Data__c/fields/Hq_State__c.field-meta.xml
<CustomField>
    <fullName>Hq_State__c</fullName>
    <label>Hq State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>