force-app/main/default/objects/DB_Data__c/fields/Original_Source__c.field-meta.xml
<CustomField>
    <fullName>Original_Source__c</fullName>
    <label>Original Source</label>
    <length>90</length>
    <type>Text</type>
</CustomField>