force-app/main/default/objects/DB_Data__c/fields/Parent_Duns_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Duns_Name__c</fullName>
    <label>Parent Duns Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>