force-app/main/default/objects/DB_Data__c/fields/Parent_Duns_Number__c.field-meta.xml
<CustomField>
    <fullName>Parent_Duns_Number__c</fullName>
    <label>Parent Duns Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>