force-app/main/default/objects/DB_Data__c/fields/Processing_Method__c.field-meta.xml
<CustomField>
    <fullName>Processing_Method__c</fullName>
    <label>Processing Method</label>
    <length>12</length>
    <type>Text</type>
</CustomField>