force-app/main/default/objects/DB_Data__c/fields/Rpt_Grp1__c.field-meta.xml
<CustomField>
    <fullName>Rpt_Grp1__c</fullName>
    <label>Rpt_Grp1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>