force-app/main/default/objects/DB_Data__c/fields/Rpt_Grp2__c.field-meta.xml
<CustomField>
    <fullName>Rpt_Grp2__c</fullName>
    <label>Rpt_Grp2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>