force-app/main/default/objects/DB_Data__c/fields/Rpt_Grp3__c.field-meta.xml
<CustomField>
    <fullName>Rpt_Grp3__c</fullName>
    <label>Rpt_Grp3</label>
    <length>90</length>
    <type>Text</type>
</CustomField>