force-app/main/default/objects/DB_Data__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>