force-app/main/default/objects/DB_Data__c/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <label>Specialty</label>
    <length>270</length>
    <type>LongTextArea</type>
</CustomField>