force-app/main/default/objects/DB_Data__c/fields/TF_Naics_6_Code__c.field-meta.xml
<CustomField>
    <fullName>TF_Naics_6_Code__c</fullName>
    <label>TF Naics 6 Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>