force-app/main/default/objects/DB_Data__c/fields/TF_Naics_6_Title__c.field-meta.xml
<CustomField>
    <fullName>TF_Naics_6_Title__c</fullName>
    <label>TF Naics 6 Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>