force-app/main/default/objects/DB_Data__c/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <label>Total Revenue</label>
    <length>45</length>
    <type>Text</type>
</CustomField>