force-app/main/default/objects/DB_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ca_Parent_Duns_Number__c</columns>
    <columns>Ca_Parent_Duns_Name__c</columns>
    <columns>Duns_Name__c</columns>
    <columns>Duns_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Geocoded_Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>